# codesense

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/app/ai/agent/: graph.py  nodes.py  prompts.py  tools.py
backend/app/ai/rag/: chunker.py  embedder.py  pipeline.py  prompts.py  retriever.py
backend/app/ai/schemas/: output.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  agent_trace.py  analyze.py  compare.py  profile.py  query.py  snapshot.py  ws.py
backend/app/core/: config.py
backend/app/db/: session.py  sync_session.py
backend/app/models/: __init__.py  embedding.py  llm_call.py  profile.py
backend/app/schemas/: profile.py
backend/app/services/: github.py  health_score.py
backend/app/workers/: analysis_agent.py  celery_app.py  embed_repo.py  index_repo.py  redis_client.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_vector_column.py  003_add_dev_commit_analytics_fields.py
backend/tests/: conftest.py  test_analyze.py  test_health_score.py  test_profile.py
deploy/: Procfile
deploy/.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.ts  router.tsx
frontend/src/hooks/: useChat.ts  useIndexingProgress.ts  useProfileMeta.ts  useTheme.ts
frontend/src/lib/: api.ts  api_compare_addition.ts  registry.ts  types.ts  utils.ts
frontend/src/pages/: Admin.tsx  (+7 more)
(+80 files in other folders)
