[project]
name = "codesense-backend"
version = "0.1.0"
description = "CodeSense backend — FastAPI + Celery + RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi==0.118.0",
    "uvicorn[standard]==0.37.0",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",

    # Database
    "sqlalchemy[asyncio]==2.0.43",
    "alembic==1.16.5",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "pgvector==0.4.1",
    "greenlet==3.2.4",

    # Validation & Settings
    "pydantic==2.11.9",
    "pydantic-settings==2.11.0",

    # Background Workers
    "celery==5.5.3",
    "redis==6.4.0",

    # AI
    "anthropic==0.72.0",
    "openai==1.109.1",
    "langgraph==0.6.10",
    "langsmith==0.4.28",

    # Observability
    "sentry-sdk[fastapi]==2.37.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "httpx==0.28.1",
    "aiosqlite==0.21.0",
    "ruff==0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]